--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@sentry/browser": "6.2.5",
     "@sentry/integrations": "6.2.5",
     "antd": "^5.12.7",
+    "cropperjs": "1.6.1",
     "firebase": "8.3.3",
     "html2canvas": "1.4.1",
     "i18next-browser-languagedetector": "6.1.4",
     "idb-keyval": "6.0.3",
     "jotai": "1.13.1",
     "react": "18.2.0",
+    "react-cropper": "2.3.3",
     "react-dom": "18.2.0",
     "socket.io-client": "4.7.2"
   },
